--- a/example/index.html
+++ b/example/index.html
@@ -40,111 +40,131 @@
   uniform vec2  uVirtRes;        // virtual raster grid (x,y)
 
   // Look controls
-  uniform float uCurvature;      // 0..~0.2
-  uniform float uRasterStrength; // 0..1
-  uniform float uChroma;         // 0 mono .. 1 color
-  uniform vec3  uTint;           // color multiplier (use 1,1,1 to keep colors)
-  uniform float uBrightness;     // overall brightness
-  uniform float uAmbient;        // center glow amount (0..0.2)
-  uniform float uFlicker;        // tiny brightness wobble (0..0.03)
-  uniform float uPersistence;    // 0..0.1 mix from previous frame
-  uniform int   uRasterMode;     // 0=scanlines, 1=subpixel, 2=pixel
+  uniform float uCurvature;
+  uniform float uRasterStrength;
+  uniform float uChroma;
+  uniform vec3  uTint;
+  uniform float uBrightness;
+  uniform float uAmbient;
+  uniform float uFlicker;
+  uniform float uPersistence;
+  uniform int   uRasterMode;
+  uniform float uHorizontalSync; // 0..1
+  uniform float uGlowingLine;    // 0..0.2
+  uniform float uStaticNoise;    // 0..1
 
-  // Utility
-  float luma(vec3 c){ return dot(c, vec3(0.299, 0.587, 0.114)); }
+  // --- Fidelity constants (from cool-retro-term)
+  #define INTENSITY 0.30
+  #define BRIGHTBOOST 0.30
+  #define SUBPIXELS 3.0
+  const float PI = 3.14159265359;
 
-  // Subtle barrel distortion around center
+  // --- Utilities
+  float rgb2grey(vec3 c){ return dot(c, vec3(0.21, 0.72, 0.04)); }
+
+  float hash(vec2 p){
+    p = vec2(dot(p, vec2(127.1, 311.7)), dot(p, vec2(269.5, 183.3)));
+    return fract(sin(p.x+p.y) * 43758.5453);
+  }
+
+  // --- Effects
   vec2 barrel(vec2 uv, float k){
     vec2 cc = uv - 0.5;
     float d = dot(cc, cc) * k;
     return uv - cc * (1.0 + d) * d;
   }
 
-  // Scanline-only raster (horizontal lines)
   vec3 raster_scanline(vec2 screenUV, vec3 texel, vec2 virtRes){
     vec2 coords = fract(screenUV * virtRes) * 2.0 - 1.0;
     float mask = 1.0 - abs(coords.y);
-    vec3 hi = ((1.0 + 0.30) - (0.2 * texel)) * texel;
-    vec3 lo = ((1.0 - 0.30) + (0.1 * texel)) * texel;
-    return mix(texel, mix(lo, hi, mask), uRasterStrength);
+    vec3 hi = ((1.0 + BRIGHTBOOST) - (0.2 * texel)) * texel;
+    vec3 lo = ((1.0 - INTENSITY) + (0.1 * texel)) * texel;
+    vec3 raster = mix(lo, hi, mask);
+    return mix(texel, raster, uRasterStrength);
   }
 
-  // Subpixel triads along X + scanlines
   vec3 raster_subpixel(vec2 screenUV, vec3 texel, vec2 virtRes){
-    float PI = 3.14159265359;
     vec2 omega = PI * 2.0 * virtRes;
     vec2 ang = screenUV * omega;
-    const float SUBPIXELS = 3.0;
-    vec3 offs = vec3(PI) * vec3(0.5, 0.5 - 2.0/3.0, 0.5 - 4.0/3.0);
-    vec3 xf = (SUBPIXELS + sin(ang.x + offs)) / (SUBPIXELS + 1.0);
-    vec3 t = texel * xf;
+    const vec3 offsets = vec3(PI) * vec3(0.5, 0.5 - 2.0/3.0, 0.5 - 4.0/3.0);
+    vec3 xfactors = (SUBPIXELS + sin(ang.x + offsets)) / (SUBPIXELS + 1.0);
+
+    vec3 t = texel * xfactors;
     vec2 coords = fract(screenUV * virtRes) * 2.0 - 1.0;
     float mask = 1.0 - abs(coords.y);
-    vec3 hi = ((1.0 + 0.30) - (0.2 * t)) * t;
-    vec3 lo = ((1.0 - 0.30) + (0.1 * t)) * t;
-    vec3 ras = mix(lo, hi, mask);
-    return mix(texel, ras, uRasterStrength);
+    vec3 hi = ((1.0 + BRIGHTBOOST) - (0.2 * t)) * t;
+    vec3 lo = ((1.0 - INTENSITY) + (0.1 * t)) * t;
+    vec3 raster = mix(lo, hi, mask);
+    return mix(texel, raster, uRasterStrength);
   }
 
-  // Pixel-cell style raster
   vec3 raster_pixel(vec2 screenUV, vec3 texel, vec2 virtRes){
     vec2 coords = fract(screenUV * virtRes) * 2.0 - 1.0;
     coords *= coords; // round cells
     float mask = clamp(1.0 - coords.x - coords.y, 0.0, 1.0);
-    vec3 hi = ((1.0 + 0.30) - (0.2 * texel)) * texel;
-    vec3 lo = ((1.0 - 0.30) + (0.1 * texel)) * texel;
-    vec3 ras = mix(lo, hi, mask);
-    return mix(texel, ras, uRasterStrength);
-  }
-
-  // Hash noise based on pixel coords/time
-  float hash(vec2 p){
-    p = vec2(dot(p, vec2(127.1, 311.7)), dot(p, vec2(269.5, 183.3)));
-    return fract(sin(p.x+p.y) * 43758.5453);
+    vec3 hi = ((1.0 + BRIGHTBOOST) - (0.2 * texel)) * texel;
+    vec3 lo = ((1.0 - INTENSITY) + (0.1 * texel)) * texel;
+    vec3 raster = mix(lo, hi, mask);
+    return mix(texel, raster, uRasterStrength);
   }
 
   void main(){
-    // Convert to physical pixel coords
+    // --- Coords & Initial Setup
     vec2 fragPx = (vUV * uResolution) / uDPR;
-    vec2 uv = barrel(vUV, uCurvature);
+    vec2 uv = vUV;
 
+    // --- Effect Pipeline (order from ShaderTerminal.qml)
+    // 1. Curvature
+    uv = barrel(uv, uCurvature);
+
+    // 2. Horizontal Sync
+    float sync = sin((uv.y + uTime * 0.001) * mix(4.0, 40.0, hash(uv))) * uHorizontalSync * 0.05;
+    uv.x += sync;
+
+    // 3. Jitter (skipped for now, subtle)
+
+    // 4. Static Noise
+    float noise = (hash(fragPx + uTime) - 0.5) * uStaticNoise;
+
+    // 5. Glowing Line
+    float glowingLine = fract(smoothstep(-120.0, 0.0, uv.y * uVirtRes.y - (uVirtRes.y + 120.0) * fract(uTime * 0.00015)));
+    noise += glowingLine * uGlowingLine;
+
+    // --- Sampling
     // Safe border (outside tube)
     if(any(lessThan(uv, vec2(0.0))) || any(greaterThan(uv, vec2(1.0)))){
       fragColor = vec4(0.0,0.0,0.0,1.0); return;
     }
-
-    // Sample source
     vec3 col = texture(uTex, uv).rgb;
 
-    // Chroma/tint
-    float g = luma(col);
+    // --- Color & Rasterization
+    // 6. Chroma/Tint
+    float g = rgb2grey(col);
     col = uTint * mix(vec3(g), col, uChroma);
+    col += noise;
 
-    // Rasterization in screen space (pixel-locked via uVirtRes)
+    // 7. Persistence
+    vec3 prev = texture(uPrevTex, vUV).rgb;
+    col = max(col, prev * (1.0 - uPersistence * 10.0)); // Decay prev frame
+
+    // 8. Rasterization
     vec3 ras;
     if(uRasterMode == 0)      ras = raster_scanline(vUV, col, uVirtRes);
     else if(uRasterMode == 1) ras = raster_subpixel(vUV, col, uVirtRes);
     else                      ras = raster_pixel(vUV, col, uVirtRes);
     col = ras;
 
-    // Ambient center glow
-    vec2 c = uv - 0.5;
-    float vign = smoothstep(0.9, 0.2, dot(c,c));
-    float ambient = mix(1.0, 1.0 + uAmbient, 1.0 - vign);
-    col *= ambient;
-
-    // Flicker (very small)
+    // --- Final Adjustments
+    // 9. Flicker
     float f = 1.0 + (hash(fragPx + uTime*120.0) - 0.5) * (uFlicker*2.0);
     col *= f;
 
-    // Persistence (blend previous frame a touch)
-    vec3 prev = texture(uPrevTex, vUV).rgb;
-    col = mix(col, max(col, prev), uPersistence);
+    // 10. Ambient Glow (Vignette)
+    vec2 c = uv - 0.5;
+    float vign = 1.0 - dot(c,c) * 1.5;
+    col += uAmbient * vign;
 
-    // Tiny grain
-    col *= 1.0 + (hash(fragPx + uTime*10.0) - 0.5) * 0.02;
-
-    // Brightness
+    // 11. Brightness
     col *= uBrightness;
 
     fragColor = vec4(col, 1.0);
@@ -153,8 +173,8 @@
 
   <!-- p5 from CDN -->
   <script src="https://unpkg.com/p5@1.9.0/lib/p5.min.js"></script>
-  <!-- Minimal p5 logic (static circle demo) -->
-  <script src="js/logic/sketch.js"></script>
+  <!-- P5 sketch to be rendered -->
+  <script src="js/p5_sketches/default_sketch.js"></script>
   <!-- WebGL skin glue -->
   <script src="js/skin.js" type="module"></script>
 </body>
