revert back to the default animation

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>CRT Skin + p5 (Demo)</title>
+  <title>PFiiive</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
   <!-- p5 from CDN -->
   <script src="https://unpkg.com/p5@1.9.0/lib/p5.min.js"></script>
   <!-- P5 sketch to be rendered -->
-  <script src="js/p5_sketches/unknown_pleasures.js"></script>
+  <script src="js/p5_sketches/default_sketch.js"></script>
   <!-- WebGL skin glue -->
   <script src="js/skin.js" type="module"></script>
 </body>
