--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- p5 from CDN -->
   <script src="https://unpkg.com/p5@1.9.0/lib/p5.min.js"></script>
   <!-- P5 sketch to be rendered -->
-  <script src="js/p5_sketches/live.js"></script>
+  <script src="js/p5_sketches/default_sketch.js"></script>
   <!-- WebGL skin glue -->
   <script src="js/skin.js" type="module"></script>
 </body>
