--- a/index.html
+++ b/index.html
@@ -14,8 +14,16 @@
 
   <!-- p5 from CDN -->
   <script src="https://unpkg.com/p5@1.9.0/lib/p5.min.js"></script>
-  <!-- P5 sketch to be rendered -->
-  <script src="js/p5_sketches/default_sketch.js"></script>
+
+  <!-- three.js from CDN -->
+  <script src="https://unpkg.com/three@0.158.0/build/three.min.js"></script>
+
+  <!-- Producer Modules -->
+  <script src="js/producers/p5_producer.js" type="module"></script>
+  <script src="js/producers/three_producer.js" type="module"></script>
+
+
+
   <!-- WebGL skin glue -->
   <script src="js/skin.js" type="module"></script>
 </body>
